issues are now loaded in and prepared code for fetching pull requests